--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1394,6 +1394,26 @@ nav {
 }
 
 /*---CONTENT LIST STYLES---*/
+/*---HISTORIES LIST STYLES---*/
+
+#storiesList {
+  .box {
+    width: 100%;
+  }
+  .top-nav-wrapper {
+    padding: 40px 0 25px 0;
+    .top-nav-title {
+      font-size: 2.3em;
+    }
+    .top-nav-subtitle {
+      max-width: 31%;
+      margin: 15px 0 0 0;
+      font-size: 1.1em;
+    }
+  }
+}
+
+/*---END HISTORIES LIST STYLES---*/
 /*---LISTINGS BOX STYLES---*/
 
 #listing:not(:last-child) {
