--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1804,6 +1804,10 @@ nav {
     }
   }
   .listing-body {
+    h2 {
+      font-size: 1.7rem;
+      margin: 20px 0;
+    }
     p:first-child {
       margin-top: 0;
     }
@@ -1862,7 +1866,9 @@ nav {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 50px 0 60px 0;
+    margin: 40px 0 60px 0;
+    border-top: 1px solid #e8e8e8;
+    padding-top: 40px;
     h2 {
       text-align: center;
       font-size: 1.9em;
