implemented images selector on editor forms for activity and place

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -2567,8 +2567,7 @@ nav {
   margin-bottom: 15px !important;
 }
 
-#storyForm,
-#editStory {
+.composer {
   .cover input[type="file"] {
     display: none;
   }
