--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -107,6 +107,20 @@ a:active {
   color: $links-color;
 }
 
+.breadcrumb {
+  margin-bottom: 8px !important;
+  background-color: transparent !important;
+  padding: 0 !important;
+  li,
+  a {
+    padding-left: 1px !important;
+    font-size: 0.9em;
+  }
+  a {
+    padding-right: 8px !important;
+  }
+}
+
 .form-control,
 button,
 .btn {
@@ -322,6 +336,7 @@ nav {
 
 .content-bar {
   padding: 8px 0;
+  display: none;
   .container {
     padding: 0;
   }
@@ -1409,15 +1424,360 @@ nav {
   .box {
     width: 100%;
   }
+  section {
+    padding: 70px 0;
+  }
+  .title-area {
+    margin-bottom: 20px;
+  }
+  .uppercase {
+    text-transform: uppercase;
+    font-family: "Nunito";
+    font-weight: 600;
+    letter-spacing: 0.5px;
+  }
+  .featured-stories {
+    align-items: center;
+    padding: 40px 0;
+  }
+  .featured-listings .listings-list {
+    margin: -10px;
+    align-items: flex-start;
+  }
+  .box .left {
+    width: 40%;
+  }
+  .box .right {
+    width: 60%;
+    min-width: 60%;
+    overflow: hidden;
+  }
   .top-nav-wrapper {
-    padding: 40px 0 25px 0;
+    border-bottom: none;
     .top-nav-title {
-      font-size: 2.3em;
+      font-size: 2.5em;
     }
     .top-nav-subtitle {
-      max-width: 31%;
       margin: 15px 0 0 0;
       font-size: 1.1em;
+      width: 100%;
+      max-width: 62%;
+    }
+    .attribution {
+      margin-top: 20px;
+      display: flex;
+      align-items: center;
+      .media-area {
+        margin-right: 10px;
+        img {
+          width: 80px;
+        }
+      }
+      .text-area {
+        font-size: 1em;
+        line-height: 1.4em;
+        color: $dark-text;
+        opacity: 0.7;
+        margin: 0;
+      }
+    }
+  }
+  #listing.featured {
+    border-bottom: none;
+    width: 33.33%;
+    margin: 10px;
+    overflow: hidden;
+    a {
+      width: 100%;
+      img {
+        height: 100%;
+        width: auto;
+      }
+      .listing-content {
+        .author-details {
+          display: flex;
+          justify-content: center;
+          margin-top: 15px;
+          .avatar {
+            width: 50px;
+            height: 50px;
+            min-width: 50px;
+            min-height: 50px;
+            background-color: black;
+            border-radius: 100px;
+            overflow: hidden;
+            border: 2px solid white;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            img {
+              width: 100%;
+              height: auto;
+            }
+          }
+        }
+        position: absolute;
+        bottom: 20px;
+        margin: 0 25px;
+        h3 {
+          color: $white-text;
+          text-align: center;
+        }
+      }
+    }
+    .listing-cover {
+      min-height: 420px;
+      height: 420px;
+      width: 100%;
+      margin-right: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      position: relative;
+      .overlay {
+        background: linear-gradient(
+          0deg,
+          rgba(0, 0, 0, 0.9) 0%,
+          rgba(0, 0, 0, 0.2) 100%
+        );
+        width: 100%;
+        height: 100%;
+        position: absolute;
+      }
+    }
+  }
+  #popularStories {
+    background-color: rgb(235 240 249 / 22%);
+    .listing-wrapper {
+      display: flex;
+      width: 100%;
+    }
+    .listings-list {
+      display: flex;
+      flex-wrap: wrap;
+      .popular-listing {
+        width: 29.43%;
+        display: flex;
+        margin: 15px 30px;
+        .listing-wrapper {
+          display: flex;
+          align-items: flex-start;
+          justify-content: space-between;
+          .left {
+            margin-right: 20px;
+            .index-ref {
+              font-size: 2em;
+              opacity: 0.3;
+              font-family: "Lora", serif;
+              margin: 0;
+              padding: 0;
+              line-height: 0.9em;
+            }
+          }
+          .center {
+            flex: 1;
+            .author-details {
+              display: flex;
+              align-items: center;
+              margin-bottom: 10px;
+              .avatar-wrapper {
+                width: 25px;
+                max-width: 25px;
+                height: 25px;
+                max-height: 25px;
+                border-radius: 100px;
+                overflow: hidden;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                margin-right: 8px;
+                .author-avatar {
+                  width: 25px;
+                  height: auto;
+                }
+              }
+              .author-name {
+                font-size: 0.9em;
+              }
+            }
+            .listing-title {
+              margin-right: 20px;
+              h3 {
+                color: #000000;
+                font-size: 1.2em;
+                font-family: "Nunito";
+                font-weight: 600;
+              }
+            }
+          }
+          .right {
+            .listing-cover {
+              width: 70px;
+              min-width: 70px;
+              height: 70px;
+              min-height: 70px;
+              background-color: white;
+              overflow: hidden;
+              border-radius: 100px;
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              img {
+                width: auto;
+                height: 100%;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+  #regularStories {
+    .col.center {
+      width: 60%;
+      max-width: 60%;
+    }
+    .listings-list {
+      flex-wrap: wrap;
+      #listing {
+        width: 100%;
+        padding-bottom: 5px;
+        .listing-wrapper {
+          .listing-cover {
+            min-width: 250px;
+            width: 250px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin-left: 30px;
+            img {
+              width: 100%;
+              height: auto;
+            }
+          }
+          .listing-content {
+            max-width: 65%;
+            .author-details {
+              display: flex;
+              align-items: center;
+              .author-avatar {
+                width: 25px;
+                max-width: 25px;
+                height: 25px;
+                max-height: 25px;
+                border-radius: 100px;
+                overflow: hidden;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                margin-right: 8px;
+                img {
+                  width: 30px;
+                  height: auto;
+                }
+              }
+              .author-name span {
+                font-size: 0.9em;
+                opacity: 0.5;
+                font-weight: bold;
+              }
+            }
+            .listing-title {
+              font-size: 1.3em;
+              margin-bottom: 5px;
+            }
+            .listing-subtitle {
+              font-size: 1.05em;
+            }
+          }
+          flex-direction: row-reverse;
+          justify-content: space-between;
+          flex: 1;
+          .listing-subtitle {
+            max-width: 100%;
+          }
+        }
+      }
+    }
+    aside.sidebar-right {
+      width: 40%;
+      max-width: 40%;
+      margin-left: 50px;
+      .cloud-tags {
+        margin: 10px -5px -5px -5px;
+        display: flex;
+        align-items: center;
+      }
+      .cloud-tag {
+        padding: 5px 10px;
+        border: 1px solid #e8e8e8;
+        border-radius: 8px;
+        margin: 5px;
+        color: #000000;
+        display: inline-flex;
+        align-items: center;
+      }
+      .ad-wrapper {
+        margin-top: 20px;
+        border-top: 1px solid #e8e8e8;
+        padding-top: 20px;
+        .ad-block {
+          height: 300px;
+          width: 100%;
+          background-color: #e8e8e8;
+        }
+      }
+      .legal-links {
+        margin-top: 20px;
+        border-top: 1px solid #e8e8e8;
+        padding-top: 20px;
+        ul {
+          list-style: none;
+          margin: 0;
+          padding: 0;
+          li {
+            display: inline-block;
+            font-size: 13px;
+            margin-right: 10px;
+          }
+        }
+        .copyright {
+          display: block;
+          font-size: 11px;
+          margin-top: 20px;
+        }
+      }
+    }
+    .title-area p {
+      max-width: 100%;
+    }
+    .listings-wrapper {
+      margin-top: 30px;
+    }
+    .listings-list {
+      display: flex;
+      margin: -10px;
+    }
+    #listing {
+      a {
+        padding: 0;
+      }
+      margin: 10px;
+      border: none;
+      .listing-cover {
+        margin-right: 0;
+        img {
+          width: auto;
+          height: 100%;
+        }
+      }
+      .listing-content {
+        width: 100%;
+        margin-top: 15px;
+      }
+    }
+    .listing-wrapper {
+      flex-direction: column;
     }
   }
 }
@@ -1450,7 +1810,7 @@ nav {
     .listing-title {
       font-size: 1.2em;
       font-weight: bold;
-      font-family: "INTER";
+      font-family: "Nunito";
       margin-top: 0;
     }
     .listing-subtitle {
@@ -1841,6 +2201,12 @@ nav {
     .pswp-thumbnail {
       margin: 7px;
       width: 31.126%;
+      max-height: 148px;
+      overflow: hidden;
+      border-radius: 10px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
     .pswp-thumbnail img {
       width: 100%;
@@ -2563,7 +2929,9 @@ nav {
   font-family: "Nunito", sans-serif !important;
 }
 
-.ql-editor p {
+.ql-editor p,
+.ql-editor blockquote,
+.ql-editor ul li:last-child {
   margin-bottom: 15px !important;
 }
 
