--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@600&family=Nunito:wght@400;800&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Lora:wght@600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lora:wght@600;700&display=swap");
 
 html,
 body {
@@ -204,7 +204,7 @@ form button {
 /*---HEADER STYLES---*/
 
 header {
-  z-index: 1000;
+  z-index: 1001;
   position: sticky;
   top: 0;
   background-color: #ffffff;
@@ -221,7 +221,7 @@ nav {
     align-items: center;
   }
   .nav-link,
-  a {
+  a:not(.navbar-brand) {
     color: $dark-text !important;
     font-size: 0.95em;
     padding-left: 0.85rem !important;
@@ -398,160 +398,209 @@ nav {
 
 #homepage {
   #hero {
-    padding: 100px 0 120px 0;
-    background-size: cover !important;
-    background-position: center center !important;
-    background-repeat: no-repeat !important;
+    padding: 80px 0;
     position: relative;
-    z-index: 100;
-    .header-title {
-      font-size: 2.2rem;
-      max-width: 420px;
-      line-height: 1.1em;
-      color: white;
-      text-shadow: 1px 2px 3px rgba(0, 0, 0, 0.5);
-    }
-    .header-subtitle {
-      font-size: 1.1rem;
-      max-width: 380px;
-      margin-top: 10px;
-      line-height: 1.3;
-      color: white;
-      text-shadow: 1px 2px 3px rgba(0, 0, 0, 0.8);
-    }
-    .search-form {
-      margin-top: 25px;
-      border-radius: 8px;
-      background-color: rgba(188, 206, 240, 0.397);
-      padding: 15px;
-      backdrop-filter: blur(15px);
-      .tab-bar {
-        ul {
-          list-style: none;
-          margin: 0;
-          padding: 0;
+    z-index: 1000;
+    .header-col.left {
+      position: inherit;
+      z-index: 1000;
+      flex: 0.7;
+      .header-title {
+        font-size: 2.5rem;
+        line-height: 1.25em;
+        color: $dark-text;
+        font-weight: bold;
+      }
+      .header-subtitle {
+        font-size: 1.2rem;
+        max-width: 450px;
+        margin-top: 20px;
+        line-height: 1.3;
+        color: $dark-text;
+      }
+      .search-form {
+        margin-top: 35px;
+        .tab-bar {
+          ul {
+            list-style: none;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            align-items: center;
+          }
+          button {
+            color: $dark-text;
+            padding: 6px 12px;
+            border: 1px solid $dark-text !important;
+            margin-right: 5px;
+            font-size: 0.9rem;
+          }
+          button.active {
+            background: $dark-text;
+            color: $white-text;
+          }
+        }
+        .header-form {
+          margin-top: 15px;
+          border-radius: 12px;
+          box-shadow: 2px 5px 20px rgb(0 0 0 / 20%);
+          background-color: $white-text;
+          padding: 10px;
+          .form-group {
+            position: relative;
+            flex: 1;
+            margin: 0;
+            border-right: 1px solid rgba(0, 0, 0, 0.1);
+            .input-label {
+              position: absolute;
+              top: 8px;
+              left: 15px;
+              font-size: 1.05em;
+              margin-bottom: 0;
+              z-index: 100;
+              color: $dark-text;
+            }
+            .form-control {
+              font-size: 0.99em;
+              letter-spacing: 0.5px;
+              padding: 35px 15px 12px 15px;
+              height: auto;
+              border: none;
+              background-color: $white-text;
+              color: $dark-text;
+              text-align: left;
+              span {
+                padding: 4px 10px;
+                background-color: aliceblue;
+                border-radius: 8px;
+                font-size: 0.9em;
+                margin-right: 8px;
+              }
+            }
+          }
+        }
+        .form-group:last-child,
+        .places .form-group:nth-child(3),
+        .activities .form-group:nth-child(2) {
+          border-right: 0;
+        }
+
+        .form-control:focus {
+          background-color: rgba(0, 0, 0, 0.05);
+        }
+        .dropdown .dropdown-toggle {
+          width: 100%;
           display: flex;
           align-items: center;
+          margin: 0;
+          border: none;
+          padding: 0;
+          max-height: 70px;
+          overflow: hidden;
+          border-radius: 8px;
+          .form-control {
+            overflow-x: scroll;
+            max-height: 70px;
+            max-width: 28.73em;
+            min-height: 90px;
+            position: relative;
+            top: 12px;
+          }
         }
-        button {
-          color: $white-text;
-          padding: 6px 25px;
+        .dropdown .dropdown-toggle::after {
+          content: none !important;
+        }
+        .dropdown .dropdown-menu {
+          width: 100%;
+          padding: 0;
+          z-index: 1000;
+          .pac-item {
+            display: flex;
+            align-items: center;
+            padding: 0 15px !important;
+          }
+          .form-check-input {
+            margin: 0;
+            width: 18px;
+            height: 18px;
+            display: block;
+            position: relative;
+          }
+          .pac-item label {
+            margin-left: 30px;
+            font-size: 1.3em;
+            color: $dark-text;
+            height: 100%;
+            width: 100%;
+            padding: 10px 15px;
+            margin: 0;
+            cursor: pointer;
+          }
+        }
+        .form-group.header-form---submit {
+          flex: 0;
+        }
+        .form-group .button-submit {
           font-weight: bold;
-        }
-        button.active {
-          background: $white-text;
-          color: $dark-text;
+          padding: 23px 15px;
+          min-width: 100px;
+          width: 100px;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          border: none;
         }
       }
     }
-    .header-form .form-group {
-      position: relative;
-      flex: 1;
-      margin: 10px 10px 0 0;
-    }
-    .header-form .input-label {
+    .header-col.right {
       position: absolute;
-      top: 12px;
-      left: 15px;
-      font-size: 0.8em;
-      font-weight: bold;
-      margin-bottom: 0;
-      z-index: 100;
-    }
-    .header-form .form-control {
-      font-size: 1.1em;
-      letter-spacing: 0.5px;
-      padding: 32px 15px 12px 15px;
-      height: auto;
-      border: none;
-      background-color: $white-text;
-      color: $dark-text;
-      text-align: left;
-      span {
-        padding: 4px 10px;
-        background-color: aliceblue;
+      z-index: 0;
+      right: 15px;
+      display: flex;
+      .header-image {
+        width: 250px;
+        overflow: hidden;
         border-radius: 8px;
-        font-size: 0.9em;
-        margin-right: 8px;
+        img {
+          width: 100%;
+          height: auto;
+        }
       }
-    }
-    .header-form .form-control:focus {
-      background-color: rgba(0, 0, 0, 0.05);
-    }
-    .header-form .dropdown .dropdown-toggle {
-      width: 100%;
-      display: flex;
-      align-items: center;
-      margin: 0;
-      border: none;
-      padding: 0;
-      max-height: 70px;
-      overflow: hidden;
-      border-radius: 8px;
-      .form-control {
-        overflow-x: scroll;
-        max-height: 70px;
-        max-width: 28.73em;
-        min-height: 90px;
+      .left {
+        margin-right: 30px;
         position: relative;
-        top: 10px;
+        top: 30px;
+        .header-image {
+          margin-bottom: 30px;
+        }
       }
-    }
-    .header-form .dropdown .dropdown-toggle::after {
-      content: none !important;
-    }
-    .header-form .dropdown .dropdown-menu {
-      width: 100%;
-      padding: 0;
-      z-index: 1000;
-      .pac-item {
-        display: flex;
-        align-items: center;
-        padding: 0 15px !important;
-      }
-      .form-check-input {
-        margin: 0;
-        width: 18px;
-        height: 18px;
-        display: block;
-        position: relative;
-      }
-      .pac-item label {
-        margin-left: 30px;
-        font-size: 1.3em;
-        color: $dark-text;
-        height: 100%;
-        width: 100%;
-        padding: 10px 15px;
-        margin: 0;
-        cursor: pointer;
-      }
-    }
-    .form-group.header-form---submit {
-      flex: 0;
-      margin: auto 0 0 0;
-    }
-    .form-group .button-submit {
-      font-weight: bold;
-      padding: 23px 15px;
-      min-width: 52px;
-      display: flex;
-      border: none;
-    }
-    .header-indicator {
-      position: absolute;
-      bottom: 20px;
-      a {
-        color: #ffffff;
-        display: flex;
-        align-items: center;
-        font-weight: bold;
-        text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.9);
+      .right {
+        .header-image {
+          height: 500px;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          img {
+            height: 100%;
+            width: auto;
+          }
+        }
       }
     }
   }
   .homepage-section {
     padding: 60px 0 0 0;
+    .uppercase {
+      text-transform: uppercase;
+      font-family: "Nunito";
+      font-weight: 600;
+      letter-spacing: 0.5px;
+      font-size: 1.15rem;
+      margin-bottom: 2px;
+    }
+    p {
+      opacity: 0.7;
+    }
     .section-listings {
       margin-top: 20px;
       .section-listings-wrapper {
@@ -563,6 +612,36 @@ nav {
         }
       }
     }
+  }
+  #placesTypes {
+    .section-litings-wrapper {
+      display: flex;
+      flex-wrap: wrap;
+      margin: 0 -10px -10px -10px;
+    }
+    .listing {
+      width: 31.65%;
+      display: flex;
+      align-items: center;
+      margin: 10px;
+      .image {
+        width: 45px;
+        height: 45px;
+        background-color: orange;
+        border-radius: 8px;
+        margin-right: 12px;
+      }
+      h3 {
+        color: #000000;
+        font-size: 1.2em;
+        font-family: "Nunito";
+        font-weight: 600;
+        margin: 0;
+      }
+    }
+  }
+  #introSection {
+    background-color: #eaf0fc;
   }
   .homepage-section:last-child {
     padding-bottom: 60px;
@@ -1420,6 +1499,71 @@ nav {
 /*---CONTENT LIST STYLES---*/
 /*---HISTORIES LIST STYLES---*/
 
+#listing.featured {
+  border-bottom: none !important;
+  width: 33.33%;
+  margin: 10px;
+  overflow: hidden;
+  a {
+    width: 100%;
+    img {
+      height: 100%;
+      width: auto;
+    }
+    .listing-content {
+      .author-details {
+        display: flex;
+        justify-content: center;
+        margin-top: 15px;
+        .avatar {
+          width: 50px;
+          height: 50px;
+          min-width: 50px;
+          min-height: 50px;
+          background-color: black;
+          border-radius: 100px;
+          overflow: hidden;
+          border: 2px solid white;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          img {
+            width: 100%;
+            height: auto;
+          }
+        }
+      }
+      position: absolute;
+      bottom: 20px;
+      margin: 0 25px;
+      h3 {
+        color: $white-text;
+        text-align: center;
+      }
+    }
+  }
+  .listing-cover {
+    min-height: 420px;
+    height: 420px;
+    width: 100%;
+    margin-right: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    .overlay {
+      background: linear-gradient(
+        0deg,
+        rgba(0, 0, 0, 0.9) 0%,
+        rgba(0, 0, 0, 0.2) 100%
+      );
+      width: 100%;
+      height: 100%;
+      position: absolute;
+    }
+  }
+}
+
 #storiesList {
   .box {
     width: 100%;
@@ -1479,70 +1623,6 @@ nav {
         color: $dark-text;
         opacity: 0.7;
         margin: 0;
-      }
-    }
-  }
-  #listing.featured {
-    border-bottom: none;
-    width: 33.33%;
-    margin: 10px;
-    overflow: hidden;
-    a {
-      width: 100%;
-      img {
-        height: 100%;
-        width: auto;
-      }
-      .listing-content {
-        .author-details {
-          display: flex;
-          justify-content: center;
-          margin-top: 15px;
-          .avatar {
-            width: 50px;
-            height: 50px;
-            min-width: 50px;
-            min-height: 50px;
-            background-color: black;
-            border-radius: 100px;
-            overflow: hidden;
-            border: 2px solid white;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            img {
-              width: 100%;
-              height: auto;
-            }
-          }
-        }
-        position: absolute;
-        bottom: 20px;
-        margin: 0 25px;
-        h3 {
-          color: $white-text;
-          text-align: center;
-        }
-      }
-    }
-    .listing-cover {
-      min-height: 420px;
-      height: 420px;
-      width: 100%;
-      margin-right: 0;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      position: relative;
-      .overlay {
-        background: linear-gradient(
-          0deg,
-          rgba(0, 0, 0, 0.9) 0%,
-          rgba(0, 0, 0, 0.2) 100%
-        );
-        width: 100%;
-        height: 100%;
-        position: absolute;
       }
     }
   }
