--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -335,8 +335,7 @@ nav {
 }
 
 .content-bar {
-  padding: 8px 0;
-  display: none;
+  padding: 0;
   .container {
     padding: 0;
   }
@@ -346,8 +345,8 @@ nav {
   .content-bar---item {
     display: flex;
     align-items: center;
-    padding: 8px 10px;
-    margin: 0 8px;
+    padding: 8px 0;
+    margin: 0 12px 0 8px;
   }
   .content-bar---item svg {
     width: 25px;
