--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -347,18 +347,21 @@ nav {
     display: flex;
     align-items: center;
     padding: 8px 0;
-    margin: 0 12px 0 8px;
+    margin: 0 10px 0 8px;
+    .content-bar---col.left {
+      display: flex;
+    }
   }
   .content-bar---item svg {
-    width: 25px;
-    height: 25px;
+    width: 21px;
+    height: 21px;
   }
   .content-bar---item .right {
     margin-left: 7px;
   }
   .content-bar---item .right p {
     line-height: 1.2em;
-    font-size: 0.95em;
+    font-size: 0.9em;
     margin: 0;
   }
 }
@@ -1442,37 +1445,62 @@ nav {
   padding: 15px 0;
   width: 100%;
   .col.left {
-    max-width: 15% !important;
+    max-width: 10%;
     margin: -15px 0;
     border-right: 1px solid #e8e8e8;
     padding-right: 0;
     height: calc(100vh - 61px);
     overflow-y: scroll;
+    position: fixed;
     .filter-list {
       .form-check {
         display: flex;
         align-items: center;
         padding: 0.2rem 1.85rem;
       }
+      .form-check-label {
+        font-size: 0.85rem;
+      }
       .form-check-input {
-        margin-left: -1.8rem;
-        width: 20px;
-        height: 20px;
+        margin-left: -1.7rem;
+        width: 18px;
+        height: 18px;
         margin-top: 0;
       }
     }
   }
   .col.center {
     flex: 1;
-    padding-left: 30px;
-    .listings-wrapper {
-      max-height: 75vh;
-      overflow-y: scroll;
+    padding: 0 30px;
+    margin-left: 10%;
+    margin-right: 25%;
+    .top-nav-wrapper {
+      padding-top: 0;
+    }
+    .listings-list {
+      margin: 15px -10px -10px -10px;
+      display: flex;
+      flex-wrap: wrap;
+    }
+    #listingSquareBox {
+      min-width: 20%;
+      max-width: 23.4% !important;
+      margin: 10px;
+      flex: 1;
     }
   }
   .col.right {
-    max-width: 28%;
-    padding-top: 15px;
+    max-width: 25%;
+    margin: -15px 0;
+    height: calc(100vh - 61px);
+    overflow-y: scroll;
+    position: fixed;
+    right: 0;
+    z-index: 1000;
+    padding: 0;
+    .map-wrapper {
+      height: 100vh;
+    }
   }
   .filter-block:not(:last-child) {
     border-bottom: 1px solid #e8e8e8;
@@ -1485,13 +1513,10 @@ nav {
     font-weight: bold;
     margin-bottom: 8px;
     display: block;
-    font-size: 0.9em;
+    font-size: 0.85em;
   }
   .map-wrapper {
-    height: 87vh;
-    border-radius: 8px;
     overflow: hidden;
-    border: 1px solid $hover-tab-background;
   }
   .map-block {
     width: 100%;
