category edition + sponsor ready for production

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1486,7 +1486,7 @@ nav {
         display: flex;
         align-items: center;
         .sponsor-block-left {
-          margin-right: 10px;
+          margin-right: 14px;
         }
         .sponsor-logo {
           width: 180px;
@@ -1495,6 +1495,7 @@ nav {
           display: flex;
           align-items: center;
           justify-content: center;
+          margin-bottom: 4px;
           img {
             width: 180px;
             height: auto;
