--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -945,6 +945,9 @@ nav {
       #listingSquareBox {
         margin: 10px;
         width: 23.3%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
       }
       .spinner {
         align-items: center;
@@ -1573,6 +1576,9 @@ nav {
       max-width: 23.4% !important;
       margin: 10px;
       flex: 1;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
     }
   }
   .col.right {
@@ -3010,9 +3016,9 @@ nav {
 
 .followBox {
   position: fixed;
-  width: 420px;
+  width: 450px;
   bottom: 20px;
-  left: 20px;
+  right: 20px;
   z-index: 1000;
   background-color: #ffffff;
   padding: 20px;
@@ -3171,7 +3177,7 @@ nav {
   }
 }
 
-.images-wrapper img {
+.images-wrapper img:not(.images-wrapper .header-image img) {
   border: 7px solid #fff;
   border-radius: 8px;
   display: block;
