--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -657,6 +657,18 @@ nav {
       }
     }
   }
+  .top-rated-badge {
+    position: absolute;
+    left: -50px;
+    top: 75px;
+    z-index: -100;
+    img {
+      width: 100px;
+      height: 100px;
+      opacity: 0.3;
+      transform: rotate(-20deg);
+    }
+  }
   #placesTypes {
     .section-litings-wrapper {
       display: flex;
@@ -1688,8 +1700,8 @@ nav {
     .overlay {
       background: linear-gradient(
         0deg,
-        rgba(0, 0, 0, 0.9) 0%,
-        rgba(0, 0, 0, 0.2) 100%
+        rgba(0, 0, 0, 0.5) 0%,
+        rgba(0, 0, 0, 0) 100%
       );
       width: 100%;
       height: 100%;
