--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -256,21 +256,34 @@ nav {
   .navbar-brand img {
     width: 135px;
   }
-  .nav-col.left {
+
+  .nav-col.left .navbar-nav,
+  .nav-col.right form {
+    width: 100%;
+    position: relative;
+  }
+  .nav-col.right {
     flex: 1;
   }
-  .nav-col.left .navbar-nav {
+
+  .nav-col.right .nav-col-right-wrapper {
+    flex: 1;
+    display: flex;
+  }
+
+  .nav-col.right .nav-col-right-responsive {
+    display: none;
+  }
+
+  .nav-col.right .navbar-nav.search-box {
     align-items: center;
     background-color: $input-background;
     padding-left: 10px;
     border-radius: 7px;
+    margin: 0 30px;
   }
-  .nav-col.left .navbar-nav,
-  .nav-col.left form {
-    width: 100%;
-    position: relative;
-  }
-  .nav-col.left form .search-helper {
+
+  .nav-col.right form .search-helper {
     position: absolute;
     right: 15px;
     top: 10px;
@@ -283,16 +296,16 @@ nav {
       height: 20px;
     }
   }
-  .nav-col.left .form-control {
+  .nav-col.right .form-control {
     background-color: $input-background;
     border: none;
     padding-left: 5px;
   }
-  .nav-col.left .form-control:focus {
+  .nav-col.right .form-control:focus {
     box-shadow: none !important;
   }
   .nav-col.right .navbar-nav:first-child {
-    padding: 0 50px;
+    flex: 1;
   }
   .btn.signup {
     background-color: $dark-button-background;
@@ -3325,4 +3338,208 @@ nav {
 
 #legalTerms section p:last-child {
   margin-bottom: 0;
+}
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+  .content-bar .content-bar---wrapper {
+    height: 50px;
+    overflow: hidden;
+  }
+
+  .content-bar .content-bar---wrapper .content-bar---inner {
+    overflow-x: scroll;
+    height: 70px;
+  }
+
+  .content-bar .content-bar---wrapper .content-bar---inner p {
+    white-space: nowrap;
+  }
+
+  .nav-col.right {
+    justify-content: flex-end;
+  }
+
+  .nav-col.right .nav-col-right-wrapper {
+    display: none !important;
+  }
+
+  .nav-col.right .nav-col-right-responsive {
+    display: block !important;
+    .hamb-btn {
+      padding: 0;
+      background: none;
+      svg {
+        height: 30px;
+        width: 30px;
+        margin: 0;
+      }
+    }
+  }
+
+  .nav-responsive-wrapper {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    position: absolute;
+    left: 0;
+    top: 64px;
+    background: white;
+    padding: 20px;
+    border-bottom: 1px solid $dark-button-border;
+    .navbar-nav:nth-child(2) {
+      display: flex;
+      flex-direction: column !important;
+      margin-top: 10px;
+      a {
+        width: 100%;
+        padding: 10px 0;
+        border-bottom: 1px solid $dark-button-border;
+      }
+    }
+    .navbar-nav:nth-child(3) {
+      justify-content: space-around;
+      margin-top: 15px;
+      a {
+        flex: 1;
+        text-align: center;
+        margin: 5px;
+        height: 36px;
+      }
+      a:first-child {
+        border: 1px solid $dark-button-border;
+        font-size: 0.95em;
+        font-size: 0.95em;
+        padding-left: 0.85rem !important;
+        padding-right: 0.85rem !important;
+        padding: 0.375rem 0.75rem;
+        border-radius: 8px !important;
+      }
+    }
+    .search-box {
+      flex-direction: row !important;
+      margin: 0 !important;
+      .search-helper {
+        display: none !important;
+      }
+    }
+  }
+
+  #homepage #hero {
+    padding: 30px 0 50px 0;
+    overflow: hidden;
+  }
+  #homepage #hero .wrapper {
+    flex-direction: column;
+  }
+  #homepage #hero .header-col.left {
+    width: 100%;
+    flex: 1;
+  }
+  #homepage #hero .header-col.right {
+    position: relative;
+    top: 60px;
+    right: 60px;
+  }
+
+  #homepage #hero .header-col.left .search-form .tab-bar ul {
+    margin: -5px;
+  }
+
+  #homepage #hero .header-col.left .search-form .tab-bar ul li {
+    width: 100%;
+    flex: 1;
+    margin: 5px;
+  }
+
+  #homepage #hero .header-col.left .search-form .tab-bar ul li button {
+    display: block;
+    width: 100%;
+    margin: 0;
+  }
+
+  #homepage #hero .header-col.left .search-form .header-form {
+    flex-direction: column;
+  }
+
+  #homepage #hero .header-col.left .search-form .header-form .form-group {
+    width: 100%;
+    border: 1px solid #f2f7f9;
+    border-radius: 7px;
+    margin-bottom: 10px;
+  }
+
+  #homepage
+    #hero
+    .header-col.left
+    .search-form
+    .header-form
+    .form-group
+    .button-submit {
+    width: 100%;
+  }
+
+  #homepage .homepage-section .section-listings .section-listings-wrapper {
+    flex-direction: column;
+  }
+
+  #homepage
+    .homepage-section
+    .section-listings
+    .section-listings-wrapper
+    #listingSquareBox,
+  #homepage #placesTypes .listing,
+  #listing.featured {
+    width: 100%;
+    margin: 0 0 15px 0;
+  }
+
+  #homepage
+    .homepage-section
+    .section-listings
+    .section-listings-wrapper
+    #listingSquareBox:last-child,
+  #listing.featured:last-child {
+    margin-bottom: 0;
+  }
+
+  #homepage #placesTypes .section-litings-wrapper {
+    flex-direction: column;
+  }
+
+  #listing .listing-wrapper {
+    padding: 0;
+  }
+
+  #footer .footer-intro,
+  #footer .footer-about,
+  #footer .footer-support {
+    margin-bottom: 20px;
+  }
+
+  .followBox {
+    width: 93%;
+    right: 0px;
+    left: 0px;
+    margin: 0 auto;
+  }
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+  header {
+    overflow: hidden;
+  }
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
 }
